--- a/sourse/pug/pages/03-contacts.pug
+++ b/sourse/pug/pages/03-contacts.pug
@@ -7,10 +7,12 @@ include ../blocks/sAbout/_sAbout.pug
 include ../blocks/sHello/_sHello.pug
 include ../blocks/sIcons/_sIcons.pug
 include ../blocks/sForm/_sForm.pug
+include ../blocks/sColaboration/_sColaboration.pug
+include ../blocks/sContacts/_sContacts.pug
 
 block variables
 	- let  mainPage= null 
-	- let  bg= '01.png'
+	- let  bg= '03.png'
 
 block title
 	- let  title= 'title'
@@ -21,11 +23,5 @@ block pagecontent
 		+topLine()
 		+top-nav()
 		+brands()
-	+sAbout()
-	+sHello()
-	+sIcons()
-	+sForm()
+	+sContacts()
 	+footer()
-
-
-
