and made one more page

--- a/sourse/pug/blocks/sContacts/_sContacts.pug
+++ b/sourse/pug/blocks/sContacts/_sContacts.pug
@@ -12,9 +12,9 @@ mixin sContacts(data)
 					h1 Контакты
 				+e.sub-title Адрес:
 				+e.address г. Москва, ул.Складочная д.1, стр. 9
-				+e.a-links
-					+e.a-link(href="#") Схема проезда от станции метро Дмитровская
-					+e.a-link(href="#") Схема проезда от станции метро Савеловская
+				+b.a-links
+					+e.link(href="#") Схема проезда от станции метро Дмитровская
+					+e.link(href="#") Схема проезда от станции метро Савеловская
 				+e.sub-title Телефоны:
 				+e.tells
 					+e.tell(href='tel:+78007758272') Россия +7 (800) 775-82-72
