--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -36,6 +36,7 @@ $utilities: ("opacity": (
 $white: #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
+$gray-280: #E8E8E8;
 $gray-290: #EEEEEE;
 $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
