--- a/sourse/pug/blocks/sForm/_sForm.pug
+++ b/sourse/pug/blocks/sForm/_sForm.pug
@@ -26,7 +26,7 @@ mixin sForm()
 									a(href="#") условия.
 	// end sForm
 
-mixin sFormAlt()
+mixin sFormAlt(data)
 	// start sForm
 	+b.SECTION.sForm--alt.section#sForm&attributes(attributes)
 		.container
@@ -34,8 +34,8 @@ mixin sFormAlt()
 				+e.bg
 					img(loading="lazy" src="img/@2x/sAbout-bg.png" alt="")
 				+b.section-title
-					h2 Хотите сотрудничать с нами?
-					p Заполните форму обратной связи, мы перезвоним вам и поговорим о сотрудничестве
+					h2=data.title
+					p=data.descr
 				+form-wrap()
 					+e.row--alt.row
 						+e.inp-col.col-md-6.col-lg-auto
