--- a/sourse/pug/blocks/sDelivery/_sDelivery.pug
+++ b/sourse/pug/blocks/sDelivery/_sDelivery.pug
@@ -5,13 +5,14 @@ mixin sDelivery(data)
 			.tabs
 				+e.caption-row.tabs__caption.row
 					.col-auto
-						+e.tabs-btn.tabs__btn.active Способы доставки
+						+e.tabs-btn.tabs__btn Способы доставки
 					.col-auto
-						+e.tabs-btn.tabs__btn Способы оплаты
+						+e.tabs-btn.tabs__btn.active Способы оплаты
 				.tabs__wrap
-					.tabs__content.active
-						+delivery()
 					.tabs__content
+						+delivery()
+					.tabs__content.active
+						+payment()
 	// end sDelivery
 
 mixin delivery()
@@ -20,13 +21,13 @@ mixin delivery()
 			| Вы можете приобрести все товары из нашего ассортимента с доставкой во все города России. По Москве и Московской области мы доставляем Ваши заказы ежедневно в удобное для Вас время. Также у нас можно забрать заказы самостояельно. Более подробно ознакомится с условиями можно в разделе
 			|
 			a(href="#") самовывоз.
-		+e.img-row.row.align-items-center
-			.col-md
+		+e.img-row.row.align-items-xl-center
+			.col-lg
 				+e.i-txt
 					h2 Условия доставки
 					p Доставка осуществляется на фактический адрес (улица, дом, квартира или офис), в офисные здания, торговые центры и предприятия доставка осуществляется до первого "препятствия" (кпп, ресепшн, проходная и т.п.). Мы не доставляем заказы в парки, лесные массивы, на пляжи или иные места, не имеющие определенного адреса. Время ожидания курьером не более 15 мин. При доставке на территорию с оплачиваемым въездом, вы оплачиваете стоимость въезда, иначе доставка только до места платного въезда. В день доставки, по указанному в заказе телефону, с покупателем связывается курьер и уточняет адрес и интервал времени доставки.
 					p В указанный период покупатель должен находиться по адресу доставки, а контактные телефоны должны быть доступны. Если курьер не дозвонился до Вас, доставка осуществлена не будет, но может быть перенесена на ближайшую дату по Вашему желанию. Внимание! Крупногабаритный товар, который невозможно занести в помещения по причине того, что дверной проем меньше по высоте и/или ширине габаритных размеров товара, доставляется до порога. В случае отказа от доставки такого товара стоимость услуг доставки оплачивается клиентом в полном размере.
-			.col-md-4
+			.col-lg-5.col-xl-4
 				+e.img
 					img(loading="lazy" src="img/@2x/delivery-img.jpg" alt="")
 		+e.items-row.row
@@ -64,3 +65,47 @@ mixin deliveryItem(title, txt)
 		+e.item
 			h4=title
 			p=txt
+
+mixin payment()
+	+b.payment
+		+e.row.row
+			.col-md
+				+e.dd-items.payment-dd-items-js
+					+paymentDDItem(1, 'Оплата картой', 'active')
+					+paymentDDItem(2, 'Оплата при получении')
+					+paymentDDItem(3, 'Безналичный расчет')
+			+e.slider-col.col-md-auto
+				.swiper-container.payment-slider-js
+					.swiper-wrapper
+						-for(var i = 0; i < 3; i++)
+							.swiper-slide
+								+e.item
+									+e.bg
+										img(loading="lazy" src="img/@2x/payment-slider-1.jpg" alt="")
+									+e.s-content
+										+e.s-title Покупай в кредит!
+										+e.s-descr В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
+										+e.s-btn(href='#') узнать подробнее
+					.swiper-pagination
+		+e.form-cont
+			+sFormAlt({
+				title: 'Есть вопросы по поводу оплаты?',
+				descr: 'Заполните форму обратной связи, мы перезвоним вам и ответим на все ваши вопросы',
+			})
+
+mixin paymentDDItem(imgNum, title, activeClasses='')
+	+e.dd-item(class=activeClasses)
+		+e.head.dd-head-js
+			+e.h-row.row.align-items-center
+				.col-auto
+					+e.h-icon
+						img.img-svg-js(loading="lazy" src=`img/svg/payment-item-${imgNum}.svg` alt="")
+				.col
+					+e.title=title
+				.col-auto
+					+e.chevron
+						+icon('chevron-down')
+		+e.content.dd-content-js(class=activeClasses)
+			p Банковская карта VISA, MasterCard, МИР. Возможно оплатить заказ онлайн, при получении заказа при доставке или в шоу-руме.
+			p Для оплаты (ввода реквизитов Вашей карты) Вы будете перенаправлены на платежный шлюз ПАО СБЕРБАНК. Соединение с платежным шлюзом и передача информации осуществляется в защищенном режиме с использованием протокола шифрования SSL. В случае если Ваш банк поддерживает технологию безопасного проведения интернет-платежей Verified By Visa или MasterCard SecureCode для проведения платежа также может потребоваться ввод специального пароля.
+			p Настоящий сайт поддерживает 256-битное шифрование. Конфиденциальность сообщаемой персональной информации обеспечивается ПАО СБЕРБАНК. Введенная информация не будет предоставлена третьим лицам за исключением случаев, предусмотренных законодательством РФ. Проведение платежей по банковским картам осуществляется в строгом соответствии с требованиями платежных систем МИР, Visa Int. и MasterCard Europe Sprl. Возврат переведенных средств, производится на Ваш банковский счет в течение 5—30 рабочих дней (срок зависит от Банка, который выдал Вашу банковскую карту).
