--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -9,6 +9,10 @@
 	font-size:(10/10)*1rem;
 	width:(14/10)*1em;
 }
+.icon-chevron-down {
+	font-size:(8/10)*1rem;
+	width:(13/8)*1em;
+}
 .icon-chevron-left {
 	font-size:(8/10)*1rem;
 	width:(5/8)*1em;
