--- a/sourse/pug/blocks/sDelivery/_sDelivery.scss
+++ b/sourse/pug/blocks/sDelivery/_sDelivery.scss
@@ -56,7 +56,7 @@
 		}
 
 		flex-direction: column-reverse;
-		@include media-breakpoint-up(md){
+		@include media-breakpoint-up(lg){
 			flex-direction: row;
 		}
 	}
@@ -187,5 +187,186 @@
 	&__form-cont{
 		margin: 0 -15px;
 	}
+	&__{}
+}
+
+.payment{
+	@include media-breakpoint-up(xxl){
+		padding-top: rem(11);
+	}
+
+	&__row{
+		--bs-gutter-y: #{rem(30)};
+
+		--bs-gutter-x: #{rem(20)};
+		@include media-breakpoint-up(lg){
+			--bs-gutter-x: #{rem(30)};
+		}
+		padding-bottom: rem(35);
+	}
+	&__dd-items{
+
+	}
+	&__dd-item{
+		&:first-child{
+			border-top: 1px solid $gray-280;
+		}
+		border-bottom: 1px solid $gray-280;
+
+		&.active{
+			--h-col: #{$primary};
+			--chevron-rotate: 180deg;
+		}
+
+		padding-bottom: rem(11);
+	}
+	&__head{
+		padding: rem(20) 0 rem(16);
+		cursor: pointer;
+	}
+	&__h-row{
+		--bs-gutter-x: #{rem(19)};
+	}
+	&__h-icon{
+		width: rem(33);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		& > *{
+			width: auto;
+			max-width: 100%;
+		}
+		svg{
+			@include mt();
+			path,rect,circle{
+				fill: var(--h-col, #{$gray-530})!important;
+			}
+		}
+	}
+	&__title{
+		@include mt();
+		color: var(--h-col, #{$gray-530});
+
+		font-size: rem(20);
+		@include media-breakpoint-up(sm){
+			font-size: rem(26);
+		}
+		line-height: (34/26);
+	}
+	&__chevron{
+		@include mt();
+		transform: rotateX(var(--chevron-rotate, #{0deg}));
+
+		.icon{
+			@include mt();
+			font-size: rem(8);
+			color: var(--h-col, #{$gray-530});
+		}
+	}
+	&__content{
+		display: none;
+		&.active{
+			display: block;
+		}
+		padding-bottom: rem(23);
+		line-height: (22/16);
+
+		p{
+			margin-bottom: 16px;
+		}
+
+		& > *:last-child{
+			margin-bottom: 0;
+		}
+	}
+
+	&__form-cont{
+		margin: 0 -15px;
+	}
+	//
+	&__slider-col{
+		@include media-breakpoint-up(md){
+			width: calc(#{rem(280)} + var(--bs-gutter-x)) !important;
+		}
+		@include media-breakpoint-up(lg){
+			width: calc(#{rem(317)} + var(--bs-gutter-x)) !important;
+		}
+		@include media-breakpoint-up(xxl){
+			position: relative;
+			margin-top: (-74px);
+		}
+
+		.swiper-container{}
+		.swiper-wrapper{
+			margin-bottom: rem(18);
+		}
+		.swiper-slide{
+			height: auto;
+			width: 100%;
+		}
+		//
+		.swiper-pagination{
+			position: static;
+		}
+	}
+	&__item{
+		position: relative;
+		z-index: 1;
+		padding: rem(45) rem(30);
+
+		min-height: rem(632);
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+	}
+	&__bg{
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		&:after{
+			content: '';
+			position: absolute;
+			top: 8px;
+			left: 8px;
+			width: calc(100% - 16px);
+			height: calc(100% - 16px);
+			border: 1px solid rgba($white, .2);
+		}
+
+		img{
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+	&__s-content{
+		//position: relative;
+		//z-index: 2;
+		color: $white;
+	}
+	&__s-title{
+		font-size: rem(26);
+		line-height: (34/26);
+		color: $white;
+
+		margin-bottom: rem(12);
+	}
+	&__s-descr{
+		line-height: (22/16);
+		color: $white;
+
+		margin-bottom: rem(34);
+	}
+	&__s-btn{
+		@extend .btn;
+		@extend .btn-primary;
+		width: 100%;
+		text-transform: uppercase;
+	}
+	&__{}
 	&__{}
 }
