--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -44,8 +44,10 @@ $gray-500: #adb5bd !default;
 $gray-510: #C4C4C4;
 $gray-520: #BABABA;
 $gray-520: #ECECEC;
+$gray-530: #9B9B9B;
 $gray-550: #9C9C9C;
 $gray-580: #858585;
+$gray-590: #A9A9A9;
 $gray-600: #6c757d !default;
 $gray-650: #747474;
 $gray-670: #717171;
