--- a/sourse/pug/blocks/sDelivery/_sDelivery.scss
+++ b/sourse/pug/blocks/sDelivery/_sDelivery.scss
@@ -285,31 +285,41 @@
 		margin: 0 -15px;
 	}
 	//
-	&__slider-col{
-		@include media-breakpoint-up(md){
-			width: calc(#{rem(280)} + var(--bs-gutter-x)) !important;
-		}
-		@include media-breakpoint-up(lg){
-			width: calc(#{rem(317)} + var(--bs-gutter-x)) !important;
-		}
+	&__{}
+	&__{}
+
+	//
+	.slider-col{
 		@include media-breakpoint-up(xxl){
 			position: relative;
 			margin-top: (-74px);
 		}
-
-		.swiper-container{}
-		.swiper-wrapper{
-			margin-bottom: rem(18);
-		}
-		.swiper-slide{
-			height: auto;
-			width: 100%;
-		}
-		//
-		.swiper-pagination{
-			position: static;
-		}
 	}
+}
+
+.slider-col{
+	@include media-breakpoint-up(md){
+		width: calc(#{rem(280)} + var(--bs-gutter-x)) !important;
+	}
+	@include media-breakpoint-up(lg){
+		width: calc(#{rem(317)} + var(--bs-gutter-x)) !important;
+	}
+
+	.swiper-container{}
+	.swiper-wrapper{
+		margin-bottom: rem(18);
+	}
+	.swiper-slide{
+		height: auto;
+		width: 100%;
+	}
+	//
+	.swiper-pagination{
+		position: static;
+	}
+
+
+	//
 	&__item{
 		position: relative;
 		z-index: 1;
@@ -321,27 +331,7 @@
 		justify-content: flex-end;
 	}
 	&__bg{
-		position: absolute;
-		z-index: -1;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		&:after{
-			content: '';
-			position: absolute;
-			top: 8px;
-			left: 8px;
-			width: calc(100% - 16px);
-			height: calc(100% - 16px);
-			border: 1px solid rgba($white, .2);
-		}
-
-		img{
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
+		@extend .bordered-bg-img;
 	}
 	&__s-content{
 		//position: relative;
@@ -367,6 +357,4 @@
 		width: 100%;
 		text-transform: uppercase;
 	}
-	&__{}
-	&__{}
 }
