--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -604,3 +604,27 @@ iframe {
 		}
 	}
 }
+
+.bordered-bg-img{
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	&:after{
+		content: '';
+		position: absolute;
+		top: 8px;
+		left: 8px;
+		width: calc(100% - 16px);
+		height: calc(100% - 16px);
+		border: 1px solid rgba($white, .2);
+	}
+
+	img{
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
