--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -628,3 +628,89 @@ iframe {
 		object-fit: cover;
 	}
 }
+
+//pagination
+.pagination-wrapper{
+	ul{
+		list-style: none;
+		padding: 0;
+		margin: 0;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		li{
+			margin-right: rem(6);
+			@include media-breakpoint-up(sm){
+				margin-right: rem(12);
+			}
+			@include media-breakpoint-up(md){
+				margin-right: rem(16);
+			}
+			@include media-breakpoint-up(xl){
+				margin-right: rem(22);
+			}
+			&:last-child{
+				margin-right: 0;
+			}
+		}
+
+		a,span{
+			@extend .btn;
+			@extend .btn-primary;
+
+			min-width: rem(30);
+			height: rem(30);
+			@include media-breakpoint-up(sm){
+				min-width: rem(32);
+				height: rem(32);
+			}
+			@include media-breakpoint-up(md){
+				min-width: rem(40);
+				height: rem(40);
+			}
+			@include media-breakpoint-up(lg){
+				min-width: rem(47);
+				height: rem(47);
+			}
+
+			padding: rem(4);
+			border-radius: 50%;
+
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			&.current, &.dots{
+				pointer-events: none;
+				box-shadow: none!important;
+				border: none!important;
+				color: $headings-color!important;
+				background-color: transparent!important;
+			}
+
+			&.prev,
+			&.next{
+				background-color: transparent;
+				border: 1px solid rgba($black, .25);
+
+				.icon{
+					@include mt();
+					font-size: 12px;
+					stroke: $primary;
+					color: transparent;
+				}
+
+				&:hover{
+					border: 1px solid $primary;
+					background-color: $primary;
+					.icon{
+						stroke: $white;
+					}
+				}
+			}
+
+		}
+	}
+}
