--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -692,25 +692,57 @@ iframe {
 
 			&.prev,
 			&.next{
-				background-color: transparent;
-				border: 1px solid rgba($black, .25);
-
-				.icon{
-					@include mt();
-					font-size: 12px;
-					stroke: $primary;
-					color: transparent;
-				}
-
-				&:hover{
-					border: 1px solid $primary;
-					background-color: $primary;
-					.icon{
-						stroke: $white;
-					}
-				}
+				@extend .ball-prev-next;
 			}
 
 		}
 	}
+}
+//ball-prev-next
+
+.ball-prev-next{
+	@extend .btn;
+	@extend .btn-primary;
+
+	width: rem(30);
+	height: rem(30);
+	@include media-breakpoint-up(sm){
+		width: rem(32);
+		height: rem(32);
+	}
+	@include media-breakpoint-up(md){
+		width: rem(40);
+		height: rem(40);
+	}
+	@include media-breakpoint-up(lg){
+		width: rem(47);
+		height: rem(47);
+	}
+
+	padding: rem(4);
+	border-radius: 50%;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+
+	background-color: transparent;
+	border: 1px solid rgba($black, .25);
+
+	.icon{
+		@include mt();
+		font-size: 12px;
+		stroke: $primary;
+		color: transparent;
+	}
+
+	&:hover, &:active, &:focus{
+		border: 1px solid $primary;
+		background-color: $primary;
+		.icon{
+			stroke: $white;
+		}
+	}
+
 }
