--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -47,6 +47,7 @@ $gray-520: #ECECEC;
 $gray-530: #9B9B9B;
 $gray-550: #9C9C9C;
 $gray-580: #858585;
+$gray-585: #969595;
 $gray-590: #A9A9A9;
 $gray-600: #6c757d !default;
 $gray-650: #747474;
