--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
@@ -28,7 +28,7 @@
 			}
 		}
 
-		border-bottom: 1px solid rgba($white, .2);
+		border-bottom: 1px solid rgba($white, .1);
 	}
 
 	position: relative;
@@ -88,7 +88,7 @@
 
 
 	&__slider-wrap{
-
+		color: $body-color;
 		.swiper-container{
 			@include media-breakpoint-down(md){
 				overflow: visible!important;
