--- a/sourse/pug/blocks/sAbout/_sAbout.pug
+++ b/sourse/pug/blocks/sAbout/_sAbout.pug
@@ -14,7 +14,7 @@ mixin sAbout(data)
 						p Наша история началась в 2009 году. С тех пор мы постоянно развиваемся и сейчас рады представить вам новейший формат салона бытовой техники, где объединились все лучшие элементы классического офф-лайн шоу-рума и современного интернет-магазина. Наша история началась в 2009 году.
 					+e.message-btn(href="#") написать нам
 			+e.img
-				img(loading="lazy" src="img/@2x/sAbout-baner.png" alt="")
+				img(loading="lazy" src="img/@2x/sAbout-baner.jpg" alt="")
 			+e.pills-row.row
 				+sAboutPill('#DFD1CC', '#3F3F3F', 2009, 'год основания компании')
 				+sAboutPill('#717171', '#ffffff', '1 200', 'наименований продукции')
