--- a/sourse/pug/blocks/header/_header.scss
+++ b/sourse/pug/blocks/header/_header.scss
@@ -1,29 +1,31 @@
+// start .header
+.header {
+	position: fixed;
+	z-index: 900;
+	top: 0;
+	left: 0;
+	width: 100%;
 
-	// start .header
-	.header {
-		 
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-up(xs) {}
-	
 	//
-	@include media-breakpoint-between(md, xl) { }
-	
-	
-	//
-	@include media-breakpoint-only(xs) {}
-	@include media-breakpoint-only(sm) {}
-	@include media-breakpoint-only(md) {}
-	@include media-breakpoint-only(lg) {}
-	@include media-breakpoint-only(xl) {}
-	
-	//
-	@include media-breakpoint-down(xl) {}
-	@include media-breakpoint-down(lg) {}
-	@include media-breakpoint-down(md) {}
-	@include media-breakpoint-down(sm) {}
-	@include media-breakpoint-down(xs) {} 
-
+	&.fixed{
+		.topLine{
+			display: none!important;
+		}
+		.brands{
+			display: none!important;
+		}
+	}
 } // end.header
+
+.catalog-dd{
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 100%;
+
+	height: auto;
+	max-height: calc(var(--vh, 1vh) - var(--header-real-height));
+	z-index: 1000;
+	background-color: $gray-900;
+
+}
