--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -754,6 +754,8 @@ iframe {
 	flex-direction: column;
 	min-width: 0;
 	min-height: 100vh;
+
+	padding-top: var(--header-height, 0);
 }
 //
 .dark-page{
