--- a/sourse/pug/blocks/header/_header.pug
+++ b/sourse/pug/blocks/header/_header.pug
@@ -2,7 +2,7 @@ mixin header()
 	// start header
 	+b.HEADER.header--js#header&attributes(attributes)
 		block
-		+catalogDD()
+		//+catalogDD()
 	// end header
 
 mixin catalogDD()
