--- a/sourse/pug/blocks/sForm/_sForm.pug
+++ b/sourse/pug/blocks/sForm/_sForm.pug
@@ -1,6 +1,6 @@
 mixin sForm()
 	// start sForm
-	+b.SECTION.sForm.section#sForm&attributes(attributes)
+	+b.SECTION.sForm.section&attributes(attributes)
 		.container
 			+e.box
 				+e.bg
@@ -28,7 +28,7 @@ mixin sForm()
 
 mixin sFormAlt(data)
 	// start sForm
-	+b.SECTION.sForm--alt.section#sForm&attributes(attributes)
+	+b.SECTION.sForm--alt.section&attributes(attributes)
 		.container
 			+e.box--alt
 				+e.bg
