--- a/sourse/pug/blocks/sNew/_sNew.pug
+++ b/sourse/pug/blocks/sNew/_sNew.pug
@@ -23,8 +23,8 @@ mixin sNew(data)
 						+e.b-img
 							img(loading="lazy" src="img/@2x/sNew-baner-1.png" alt="")
 						+e.content
-							h2 Покупай в кредит
-							p технику для малого бизнеса
+							+e.b-title Покупай в кредит
+							+e.c-descr технику для малого бизнеса
 							+e.btn Узнать подробнее
 				.col-xl-5
 					+e.baner(href="#")
