--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -26,7 +26,7 @@ mixin top-nav()
 						img(loading="lazy" src="img/svg/logo.svg" alt="")
 				.col-auto.d-none.d-sm-block
 					+e.catalog-btn(type="button")
-						+e.c-img
+						+e.SPAN.c-img
 							img(loading="lazy" src='img/svg/catalog.svg' alt="")
 						span Каталог
 				.col
