--- a/sourse/pug/blocks/sNew/_sNew.scss
+++ b/sourse/pug/blocks/sNew/_sNew.scss
@@ -121,16 +121,18 @@
 		align-items: flex-start;
 
 		padding-bottom: rem(20);
-		h2{
-			color: $white;
-			font-size: rem(36);
-			font-weight: 600;
-		}
-		p{
-			font-size: rem(20);
-			color: $white;
-		}
 	}
+	&__b-title{
+		color: $white;
+		font-size: rem(36);
+		line-height: 1.2;
+		font-weight: 600;
+	}
+	&__c-descr{
+		font-size: rem(20);
+		color: $white;
+	}
+
 	&__btn{
 		@extend .btn;
 		@extend .btn-primary;
