--- a/sourse/pug/blocks/sBest/_sBest.pug
+++ b/sourse/pug/blocks/sBest/_sBest.pug
@@ -20,7 +20,7 @@ mixin sBest(data)
 							+sBestItem()
 							+sBestItem()
 					+e.big-item-col.col-xl-5
-						+sNewProdItem('big-item', '-big')
+						+sNewProdItem('big-item', '-big2')
 	// end sBest
 
 mixin sBestItem()
