--- a/sourse/pug/blocks/sBrends/_sBrends.pug
+++ b/sourse/pug/blocks/sBrends/_sBrends.pug
@@ -1,6 +1,6 @@
 mixin sBrends(data)
 	// start sBrends
-	+b.SECTION.sBrends.section#sBrends&attributes(attributes)
+	+b.SECTION.sBrends--js.section#sBrends&attributes(attributes)
 		.container
 			+b.section-title.text-center
 				h2 Товары от брендов
