--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -21,6 +21,18 @@
 	font-size:(8/10)*1rem;
 	width:(6/8)*1em;
 }
+.icon-cross {
+	font-size:(8/10)*1rem;
+	width:(8/8)*1em;
+}
+.icon-fb {
+	font-size:(24/10)*1rem;
+	width:(24/24)*1em;
+}
+.icon-inst {
+	font-size:(24/10)*1rem;
+	width:(24/24)*1em;
+}
 .icon-location {
 	font-size:(16/10)*1rem;
 	width:(14/16)*1em;
