--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -84,12 +84,18 @@
 	&__item{
 		width: rem(40);
 		height: rem(40);
+		border-radius: 50%;
 		padding: rem(4);
 		background-color: $primary;
 
 		display: flex;
 		align-items: center;
 		justify-content: center;
+
+		.icon{
+			font-size: rem(28);
+			color: $white;
+		}
 	}
 	&__white{
 		font-size: rem(18);
@@ -101,7 +107,11 @@
 	}
 	&__mail-form{
 		position: relative;
-		max-width: rem(323);
+		width: 100%;
+
+		@include media-breakpoint-up(sm){
+			max-width: rem(323);
+		}
 	}
 	&__input-wrap{
 
@@ -143,13 +153,64 @@
 			}
 		}
 	}
+
+	&__dd-item{
+		@include media-breakpoint-down(sm){
+			background-color: lighten($gray-900, 5s);
+		}
+
+		&.active{
+			--chevron-rotate: 180deg;
+		}
+	}
 	&__menu-title{
 		font-size: rem(17);
 		line-height: (27/17);
 		color: $gray-670;
-		margin-bottom: rem(30);
+
+		@include media-breakpoint-up(sm){
+			pointer-events: none;
+			margin-bottom: rem(30);
+			padding: 0;
+		}
+		@include media-breakpoint-down(sm){
+			cursor: pointer;
+			color: $white;
+			font-weight: 600;
+
+			padding: rem(10) rem(16);
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+
+			&:after{
+				@include mt();
+				transform: rotateX(var(--chevron-rotate, 0deg));
+
+				content: '';
+				display: inline-block;
+				width: rem(20);
+				height: rem(20);
+
+				background-image: url(../img/svg/chevron-down.svg);
+				background-position: center;
+				background-repeat: no-repeat;
+				background-size: contain;
+			}
+		}
 	}
 	.menu{
+		display: none;
+		&.active{
+			display: block;
+		}
+
+		padding: rem(10) rem(16) rem(30) rem(16);
+		@include media-breakpoint-up(sm){
+			padding: 0;
+			display: block!important;
+		}
+
 		list-style: none;
 		li{
 			margin-bottom: rem(10);
@@ -167,6 +228,9 @@
 			line-height: (27/18);
 
 
+			@include media-breakpoint-down(sm){
+				color: $gray-400;
+			}
 			color: $gray-520;
 			&:hover{
 				color: $white;
