--- a/sourse/pug/blocks/header/_header.scss
+++ b/sourse/pug/blocks/header/_header.scss
@@ -6,6 +6,10 @@
 	left: 0;
 	width: 100%;
 
+	&.has-pe{
+		padding-right: var(--spacing-end, 0);
+	}
+
 	//
 	&.fixed{
 		.topLine{
@@ -18,14 +22,152 @@
 } // end.header
 
 .catalog-dd{
+
+	border-top: 1px solid $gray-800;
+	@include mt();
+	transform-origin: top center;
+
+	transform: scaleY(0);
+	&.active{
+		transform: scaleY(1);
+	}
+
+	padding: rem(20) 0;
 	position: absolute;
+	display: block;
+	background: $gray-900;
+
 	top: 100%;
 	left: 0;
 	width: 100%;
 
-	height: auto;
-	max-height: calc(var(--vh, 1vh) - var(--header-real-height));
-	z-index: 1000;
-	background-color: $gray-900;
 
+	height: calc(100vh - var(--header-real-height));
+	@include media-breakpoint-up(xl){
+		height: auto;
+		max-height: calc(100vh - var(--header-real-height));
+	}
+
+	overflow-y: auto;
+	z-index: 1000;
+
+	&__close-btn{
+		cursor: pointer;
+		display: flex;
+		align-items: center;
+		margin-bottom: rem(20);
+		font-size: rem(20);
+		color: $white;
+
+		.icon{
+			margin-left: rem(15);
+			font-size: rem(16);
+		}
+	}
+
+	&__tabs-row{
+		--bs-gutter-y: #{rem(30)};
+
+		@include media-breakpoint-up(xxl){
+			--bs-gutter-x: #{rem(40)};
+		}
+	}
+	&__sub-row{
+		--bs-gutter-x: #{rem(10)};
+		--bs-gutter-y: #{rem(10)};
+	}
+	&__btn{
+		@include media-breakpoint-up(lg){
+			min-height: rem(90);
+		}
+		background-color: darken($gray-900, 5);
+		&.active{
+			background-color: darken($gray-600, 5);
+		}
+		color: $white;
+	}
+	&__btn-row{
+
+	}
+	&__txt{
+		padding: rem(6) rem(10);
+		font-size: rem(18);
+		@include media-breakpoint-up(lg){
+			padding: rem(16);
+			font-size: rem(20);
+		}
+		color: $white;
+		line-height: 1.2;
+	}
+	&__img{
+		width: 100%;
+		height: rem(90);
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		img{
+			width: auto;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
+	&__{}
+	&__{}
+	//
+	&__caption-col{
+		@include media-breakpoint-up(lg){
+			border-right: 1px solid rgba($white, .2);
+		}
+	}
+	&__content{
+		columns: 2;
+		@include media-breakpoint-up(sm){
+			columns: 3;
+		}
+	}
+	&__menu{
+		list-style: none;
+		padding: 0;
+		margin: 0;
+
+		ul{
+			list-style: none;
+			padding: 0;
+			margin: 0 0 rem(30);
+			li{
+				&:first-child{
+					margin-bottom: rem(25);
+					a{
+						font-weight: 500;
+						font-size: rem(17);
+						color: $white;
+						&:hover{
+							color: $primary;
+						}
+					}
+				}
+				margin-bottom: rem(5);
+				&:last-child{
+					margin-bottom: 0;
+				}
+
+			}
+
+			a{
+				text-decoration: none;
+				line-height: 1.2;
+				display: block;
+				color: $gray-400;
+				&:hover{
+					color: $primary;
+				}
+			}
+		}
+	}
+	&__{}
+	&__{}
+	&__{}
 }
