--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -1,16 +1,27 @@
-
-mixin modal() 
-	//  start modals
-
-	+b.modal-win(id="modal-call" class=" " style="display: none" )
+mixin modal()
+	//  start modal
+	+b.modal-win(id="modal-call" style="display: none")
 		+form-wrap
 			.text-center
-				+e.title.form-data.h3.ttu Обратный звонок
-				p.after-headline Заполните заявку и&nbsp;мы&nbsp;с&nbsp;Вами свяжемся в&nbsp;течение 15&nbsp;минут
-
-			+input("Ваше Имя")(required)  
-			+e.BUTTON.btn.btn(type="submit"  ) 
-			+policy()
+				+e.title
+					h2 Заказать обратный звонок
+					p Оставьте номер телефона, и мы позвоним вам в ближайшее время
+				+e.inputs
+					+input('', 'tel')
+					+e.btn--dark(type="submit") Перезвоните мне
+				+e.policy
+					| Нажимая кнопку "Отправить" я соглашаюсь с
+					|
+					a(href='#') Положением о персональных данных и конфиденциальности.
+	//-
+	+b.modal-win(id="modal-enter" style="display: none")
+		+form-wrap
+			.text-center
+				+e.title
+					h2 Вход/Регистрация
+				+e.inputs
+					+input('', 'tel')
+					+e.btn--primary(type="submit") Получить код в SMS
 	// #modal-call
 	
 	// end modals
