--- a/sourse/pug/blocks/sProd/_sProd.pug
+++ b/sourse/pug/blocks/sProd/_sProd.pug
@@ -68,7 +68,7 @@ mixin sProd(data)
 						+e.c-img-col.col-xl-auto
 							+e.c-img
 								img(loading="lazy" src="img/@2x/sProd-c-img.jpg" alt="")
-						+e.char-col.col-xl-auto.col-md-5
+						+e.char-col.col-xl-auto.col-md-5.d-none.d-md-block
 							+sProdCardCharCol()
 						+e.buy-col.col-xl.col-md-7
 							+sProdCardBuyCol()
