--- a/sourse/pug/blocks/sProdCard/_sProdCard.pug
+++ b/sourse/pug/blocks/sProdCard/_sProdCard.pug
@@ -33,7 +33,7 @@ mixin sProdCard(data)
 									+sProdCardThumb(3)
 									+sProdCardThumb(4)
 					//
-					+e.char-col.col-xl-auto.col-md-5
+					+e.char-col.col-xl-auto.col-md-5.d-none.d-md-block
 						+sProdCardCharCol()
 					+e.buy-col.col-xl.col-md-7
 						+sProdCardBuyCol()
