--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -6,38 +6,52 @@ mixin mob-mnu()
 			+e.logo(href="/")
 				img(loading="lazy" src="img/svg/logo.svg" alt="")
 			+mnu()
-			+b.location
+			+b.catalog-btn.catalog-btn-js.mb-4(type="button")
+				+e.SPAN.c-img
+					img(loading="lazy" src='img/svg/catalog.svg' alt="")
+				span Каталог
+			//-+b.location
 				+icon('location')
 				span null
 			+e.address.mb-4 ул.Складочная д.1, стр.9
-			+topNavSearch('mb-4')
+			//+topNavSearch('mb-4')
 			+e.tel(href="#") 8 (800) 775-82-72
 			+e.order-call.link-modal-js(href="#modal-call") Заказать звонок
-			+e.log.link-modal-js(href="#modal-enter") Войти
-			+topNavItems()
+			//+e.log.link-modal-js(href="#modal-enter") Войти
+			//+topNavItems()
 	//  мобильное меню
 
 mixin top-nav() 
 	// start top-nav
 	+b.top-nav.block-with-lazy
+		+e.mob-search.mob-search-js.d-xl-none
+			+e.container--mob.container
+				+topNavSearch()
+				+e.close-m-search.mob-search-btn-js
+					+icon('cross')
 		+e.container.container
 			+e.row.row.align-items-center
-				+e.logo-col.col-auto
+				+e.logo-col.col.col-sm-auto
 					+e.logo(href="/")
 						img(loading="lazy" src="img/svg/logo.svg" alt="")
-				.col-auto
-					+e.catalog-btn.catalog-btn-js(type="button")
+				.col.col-xl-auto.d-none.d-sm-block
+					+b.catalog-btn.catalog-btn-js(type="button")
 						+e.SPAN.c-img
 							img(loading="lazy" src='img/svg/catalog.svg' alt="")
 						span Каталог
-				.col
+				.col-auto.d-xl-none
+					+location()
+				.col-auto.d-xl-none
+					+e.mob-search-btn.mob-search-btn-js
+						img(loading="lazy" src="img/svg/zoom.svg" alt="")
+				.col.d-none.d-xl-block
 					+topNavSearch('d-none d-xl-block')
-				+e.tell-col.col-auto.d-none.d-lg-block
+				+e.tell-col.col-auto.d-none.d-xl-block
 					+e.tel(href="#") 8 (800) 775-82-72
 					+e.order-call.link-modal-js(href="#modal-call") Заказать звонок
 				+e.items-col.col-auto.d-none.d-md-block
 					+topNavItems()
-				+e.log-col.col-auto.d-none.d-sm-block
+				+e.log-col.col-auto.d-none.d-md-block
 					+e.log.link-modal-js(href="#modal-enter") Войти
 				//-
 				.col-auto.d-xl-none
@@ -94,3 +108,20 @@ mixin topNavItems()
 			+topNavItem('bars')
 			+topNavItem('like')
 			+topNavItem('cart')
+
+mixin footMobNav()
+	+b.fixed-nav--js.d-md-none
+		+e.container.container-fluid
+			+e.row.row
+				+footMobNavItem(1, 'Сравнение')
+				+footMobNavItem(2, 'Избранное')
+				+footMobNavItem(3, 'Корзина')
+				+footMobNavItem(4, 'Помощь')
+				+footMobNavItem(5, 'Войти')
+
+mixin footMobNavItem(iconNum, txt)
+	.col
+		+e.item(href='#')
+			+e.icon
+				img(loading="lazy" src=`img/svg/footMobNavItem-${iconNum}.svg` alt="")
+			+e.txt=txt
