--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -4,15 +4,21 @@
 		padding: rem(25) 0 rem(27);
 	}
 	background: $gray-900;
+	position: relative;
 
 	&__container{
+		//position: relative;
 		@include media-breakpoint-down(md){
 			max-width: 100% !important;
+		}
+
+		&--mob{
+			position: relative;
 		}
 	}
 	&__row{
 		--bs-gutter-x: #{rem(20)};
-		@include media-breakpoint-up(sm){
+		@include media-breakpoint-up(lg){
 			--bs-gutter-x: #{rem(29)};
 		}
 		--bs-gutter-y: #{rem(20)};
@@ -23,53 +29,18 @@
 	&__logo{
 		width: rem(120);
 		@include media-breakpoint-up(sm){
+			width: rem(150);
+		}
+		@include media-breakpoint-up(lg){
 			width: rem(173);
 		}
+
+
 		display: block;
 
 		img{
 			width: auto;
 			max-width: 100%;
-		}
-	}
-	&__catalog-btn{
-		@extend .btn;
-		@extend .btn-primary;
-
-		display: inline-flex;
-		align-items: center;
-		text-transform: uppercase;
-
-		padding: rem(10);
-		@include media-breakpoint-up(sm){
-			padding: 13px 18px;
-		}
-
-		@include media-breakpoint-down(sm){
-			font-size: rem(14);
-		}
-	}
-	&__c-img{
-		flex-shrink: 0;
-
-		width: rem(20);
-		height: rem(20);
-		margin-right: rem(8);
-		@include media-breakpoint-up(sm){
-			width: rem(27);
-			height: rem(20);
-			margin-right: rem(13);
-		}
-
-		display: flex;
-		align-items: center;
-		justify-content: center;
-
-		img{
-			width: auto;
-			height: auto;
-			max-width: 100%;
-			max-height: 100%;
 		}
 	}
 	&__tel{
@@ -115,10 +86,122 @@
 			padding-left: 48px;
 		}
 	}
+	//mob-search-btn
+	&__mob-search-btn{
+		cursor: pointer;
+		width: rem(25);
+		height: rem(25);
+
+		img{
+			width: auto;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
 	//
+	&__mob-search{
+		display: none;
+		&.active{
+			display: block;
+		}
+
+		padding: inherit;
+
+		position: absolute;
+		background: $gray-900;
+		z-index: 10;
+		top: 0;
+		//left: $container-padding-x - 1px;
+		//width: calc(100% - (#{$container-padding-x} - 1px) * 2);
+		width: 100%;
+		left: 0;
+		height: 100%;
+
+		.search{
+			width: 100%;
+
+			&__input{
+				background-color: transparent;
+				padding-right: rem(100);
+			}
+			&__s-btn{
+				right: rem(50);
+				//background-color: red;
+			}
+		}
+	}
+	&__close-m-search{
+		cursor: pointer;
+		@include mt();
+		width: rem(25);
+		height: rem(25);
+		//background-color: red;
+		&:hover{
+			transform: translateY(-50%) scale(1.2);
+		}
+
+		position: absolute;
+		z-index: 10;
+		right: rem(24);
+		top: 50%;
+		transform: translateY(-50%);
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		.icon{
+			font-size: rem(18);
+			color: $gray-400;
+		}
+	}
+	&__{}
 	&__{}
 	&__{}
 }
+
+.catalog-btn{
+	@extend .btn;
+	@extend .btn-primary;
+
+	display: inline-flex;
+	align-items: center;
+	text-transform: uppercase;
+
+	padding: rem(10);
+	@include media-breakpoint-up(lg){
+		padding: 13px 18px;
+	}
+
+	@include media-breakpoint-down(lg){
+		font-size: rem(14);
+	}
+
+	&__c-img{
+		flex-shrink: 0;
+
+		width: rem(20);
+		height: rem(20);
+		margin-right: rem(8);
+		@include media-breakpoint-up(lg){
+			width: rem(27);
+			height: rem(20);
+			margin-right: rem(13);
+		}
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		img{
+			width: auto;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
+}
+
 
 .search{
 	position: relative;
@@ -134,6 +217,7 @@
 
 		padding-top: 13px;
 		padding-bottom: 13px;
+		padding-right: rem(60);
 	}
 	&__s-btn{
 		@extend .btn;
@@ -288,6 +372,65 @@
 			height: auto;
 			max-width: 100%;
 			max-height: 100%;
+		}
+	}
+
+}
+.fixed-nav{
+	position: fixed;
+	z-index: 900;
+	left: 0;
+	bottom: 0;
+	padding: rem(16) 0;
+	@include media-breakpoint-up(sm){
+		padding: rem(20) 0;
+	}
+	width: 100%;
+	background-color: $gray-900;
+
+	&__container{
+		@media (max-width: 400px) {
+			padding: 0 rem(8);
+		}
+
+	}
+	&__row{
+		--bs-gutter-y: #{rem(16)};
+		--bs-gutter-x: #{rem(16)};
+
+		@media (max-width: 400px) {
+			--bs-gutter-x: #{rem(8)};
+		}
+	}
+	&__item{
+		display: block;
+		text-decoration: none;
+		color: $white;
+		text-align: center;
+	}
+	&__icon{
+		width: rem(16);
+		height: rem(16);
+		margin: 0 auto rem(8) auto;
+		@include media-breakpoint-up(sm){
+			margin: 0 auto rem(12) auto;
+		}
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		img{
+			width: auto;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
+	&__txt{
+		display: block;
+		@media (max-width: 360px) {
+			font-size: 12px;
 		}
 	}
 }
