--- a/sourse/pug/blocks/sTags/_sTags.scss
+++ b/sourse/pug/blocks/sTags/_sTags.scss
@@ -19,7 +19,11 @@
 	}
 	&__row{
 		--bs-gutter-x: #{rem(10)};
-		--bs-gutter-y: #{rem(20)};
+
+		--bs-gutter-y: #{rem(16)};
+		@include media-breakpoint-up(sm){
+			--bs-gutter-y: #{rem(20)};
+		}
 
 		&:not(.active){
 			& > *:nth-child(n + 9){
@@ -31,7 +35,10 @@
 		@extend .btn;
 		@extend .btn-outline-primary;
 
-		padding: rem(4) rem(25);
+		padding: rem(4) rem(16);
+		@include media-breakpoint-up(sm){
+			padding: rem(4) rem(25);
+		}
 		border-width: 1px;
 
 		&--toggle{
@@ -57,6 +64,7 @@
 			}
 		}
 		&--tag{
+
 			border-color: $body-color!important;
 			color: $body-color!important;
 			background-color: transparent!important;
