--- a/sourse/pug/blocks/sProd/_sProd.scss
+++ b/sourse/pug/blocks/sProd/_sProd.scss
@@ -343,6 +343,7 @@
 		}
 
 		&__dd-head{
+			cursor: pointer;
 			display: flex;
 			align-items: center;
 			background-color: lighten($gray-900, 8);
