--- a/sourse/pug/blocks/sProdCard/_sProdCard.scss
+++ b/sourse/pug/blocks/sProdCard/_sProdCard.scss
@@ -245,6 +245,7 @@
 		}
 
 		&__dd-head{
+			cursor: pointer;
 			display: flex;
 			align-items: center;
 			background-color: lighten($gray-900, 5);
