--- a/sourse/pug/blocks/sCatalog/_sCatalog.pug
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.pug
@@ -100,7 +100,7 @@ mixin sCatalogCard(data)
 				.col
 					+e.price 54 999 руб.
 				.col-auto
-					+e.add-btn.link-modal-js(href="#modal-callback")
+					+e.add-btn(href="#modal-callback" data-fancybox='')
 						+icon('plus')
 
 mixin sCatalogTag(txt)
