--- a/sourse/pug/blocks/topLine/_topLine.pug
+++ b/sourse/pug/blocks/topLine/_topLine.pug
@@ -16,4 +16,4 @@ mixin topLine()
 mixin location()
 	+b.location
 		+icon('location')
-		span null
+		span.d-none.d-lg-inline-block Комсомольск-на-Амуре
