--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -72,7 +72,6 @@
 		padding: rem(50) rem(20) rem(40) !important;
 	}
 
-
 	.carousel__button.is-close {
 		position: absolute;
 		top: rem(20) !important;
@@ -222,4 +221,190 @@
 		color: $black;
 
 	}
+}
+//
+.fancybox__slide{
+	@include media-breakpoint-down(md){
+		padding: 0!important;
+	}
+}
+.modal-city{
+	//@include mt();
+	width: 100%;
+	position: relative;
+
+	max-width: rem(720);
+	&.big{
+		max-width: 100%;
+	}
+	height: 100%;
+	@include media-breakpoint-up(md){
+		max-height: calc(100vh - #{rem(60)});
+	}
+
+	padding: var(--modal-py) var(--modal-px) !important;
+
+	--modal-px: #{rem(24)};
+	--modal-py: #{rem(24)};
+	@include media-breakpoint-up(xl){
+		--modal-py: #{rem(48)};
+		--modal-px: #{rem(30)};
+	}
+
+	.carousel__button.is-close {
+		position: absolute;
+
+		top: rem(0) !important;
+		right: rem(0) !important;
+		@include media-breakpoint-up(md){
+			top: rem(20) !important;
+			right: rem(20) !important;
+		}
+		color: $body-color!important;
+	}
+
+	.form-wrap{
+		--bs-gutter-x: #{rem(20)};
+		--bs-gutter-y: #{rem(12)};
+		@include media-breakpoint-up(sm){
+			--bs-gutter-x: #{rem(24)};
+			--bs-gutter-y: #{rem(16)};
+		}
+		.row{
+			--bs-gutter-x: inherit;
+			--bs-gutter-y: inherit;
+		}
+
+		--title-fs: #{rem(32)};
+		--title-lh: 1.25;
+		--title-mb: #{rem(20)};
+		--input-mb: #{rem(30)};
+
+		&__title{
+			font-size: var(--title-fs);
+			line-height: var(--title-lh);
+			margin-bottom: var(--title-mb);
+		}
+		&__input-wrap{
+			margin-bottom: var(--input-mb);
+		}
+		&__input{
+			border-width: 1px!important;
+		}
+		&__city{
+			padding: 0 calc(var(--bs-gutter-x)/2);
+			margin: 0 calc(var(--bs-gutter-x)/-2);
+			//width: calc(100% + var(--bs-gutter-x));
+			display: none;
+			&.active{
+				display: block;
+			}
+			//
+			@extend .custom-scroll;
+			overflow-y: auto;
+
+			min-height: rem(400);
+			height: calc(100vh - #{rem(60)} - var(--modal-py)*2 - var(--title-fs)*var(--title-lh) - var(--title-mb) - #{rem(60)} - var(--input-mb) - var(--title-mb) - #{rem(32)});
+			&--popular{
+
+			}
+			&--all{
+
+			}
+
+			a{
+				display: block;
+				text-decoration: none;
+
+				font-size: rem(18);
+				color: $headings-color;
+				&:hover{
+					color: $primary;
+				}
+			}
+		}
+
+		&__item{
+
+			margin-bottom: rem(30);
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+		&__letter{
+			font-size: rem(20);
+			font-weight: 600;
+			color: $primary;
+		}
+		&__city-row{
+
+		}
+
+		//
+		&__ancors{
+			a{
+				display: block;
+				text-align: center;
+				width: rem(20);
+				font-size: rem(18);
+				color: $primary;
+
+				margin-bottom: rem(5);
+				&:last-child{
+					margin-bottom: 0;
+					&:after{
+						content: none;
+					}
+				}
+
+				&:after{
+					content: '';
+					display: block;
+					width: rem(5);
+					height: rem(5);
+					border-radius: 50%;
+					background-color: $primary;
+					margin: 0 auto;
+				}
+			}
+		}
+		//
+		&__show-all{
+			margin-top: var(--title-mb);
+			cursor: pointer;
+			display: flex;
+			align-items: center;
+
+			text-transform: uppercase;
+			font-size: rem(16);
+			color: $headings-color;
+			&:hover{
+				color: $primary;
+			}
+		}
+		&__plus{
+			@extend .btn;
+			@extend .btn-primary;
+			width: rem(32);
+			height: rem(32);
+			margin-right: rem(16);
+			border-radius: 50%;
+			padding: 0;
+
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			.icon{
+				font-size: rem(16);
+				stroke: $white;
+				stroke-width: 1px;
+			}
+		}
+
+	}
+
+	//
+	&__{}
+	&__{}
 }
