--- a/sourse/pug/blocks/topLine/_topLine.scss
+++ b/sourse/pug/blocks/topLine/_topLine.scss
@@ -58,32 +58,139 @@
 } // end.topLine
 
 .location{
-	@include mt();
-	cursor: pointer;
 
-	display: flex;
-	align-items: center;
-	text-decoration: none;
-
-	.icon{
+	&__dd-btn{
 		@include mt();
-		color: $gray-400;
-		font-size: rem(26);
+		cursor: pointer;
 
-		@include media-breakpoint-up(lg){
-			font-size: rem(15);
-			color: $gray-650;
-			margin-right: rem(11);
-		}
-	}
-	color: $gray-650;
-	&:hover{
-		color: $white;
-		.icon{
+		display: flex;
+		align-items: center;
+		text-decoration: none;
+		color: $gray-650;
+
+		&:hover{
 			color: $white;
+			.icon{
+				color: $white;
+			}
+		}
+		font-size: rem(15);
+		line-height: (24/15);
+
+		.icon{
+			@include mt();
+			color: $gray-400;
+			font-size: rem(26);
+
+			@include media-breakpoint-up(lg){
+				font-size: rem(15);
+				color: $gray-650;
+				margin-right: rem(11);
+			}
 		}
 	}
 
-	font-size: rem(15);
-	line-height: (24/15);
+	position: relative;
+	z-index: 800;
+	&__dd{
+		@include mt();
+		transform-origin: top left;
+		transform: scale(0);
+		&.active{
+			transform: scale(1);
+		}
+
+		position: absolute;
+		z-index: 900;
+		top: 100%;
+
+		width: rem(230);
+		@include media-breakpoint-up(sm){
+			width: rem(340);
+		}
+		right: 0;
+		@include media-breakpoint-up(md){
+			left: 0;
+			right: unset;
+		}
+		padding-top: rem(20);
+	}
+	&__dd-inner{
+		background-color: $white;
+
+		padding: rem(18) rem(12);
+		@include media-breakpoint-up(sm){
+			padding: rem(20);
+		}
+
+		position: relative;
+		&:after{
+			content: '';
+			position: absolute;
+
+			left: calc(100% - #{rem(20)});
+			@include media-breakpoint-up(md){
+				left: rem(45);
+			}
+			bottom: calc(100% - 1px);
+
+			transform: translateX(-50%);
+
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 0 10px 11px 10px;
+			border-color: transparent transparent $white transparent;
+		}
+
+	}
+	&__title{
+		color: $headings-color;
+		font-weight: 500;
+		font-size: rem(18);
+		line-height: 1.25;
+
+		margin-bottom: rem(20);
+		@include media-breakpoint-up(sm){
+			margin-bottom: rem(12);
+		}
+	}
+	&__btns-row{
+		--bs-gutter-x: #{rem(10)};
+		--bs-gutter-y: #{rem(10)};
+	}
+	&__btn{
+		@extend .btn;
+		width: 100%;
+		text-align: center;
+		justify-content: center;
+
+		font-size: rem(16);
+		line-height: calc(20/16);
+
+		padding: rem(6) rem(12);
+		@include media-breakpoint-up(sm){
+			padding: rem(9) rem(15);
+		}
+		border-width: 1px;
+
+		&--orange{
+			@extend .btn-primary;
+		}
+		&--out-gray{
+			@extend .btn-outline-light;
+			border-color: $gray-400!important;
+
+			background-color: transparent!important;
+			&:hover{
+				background-color: $gray-400!important;
+			}
+
+			color: $headings-color!important;
+		}
+	}
+	&__{}
+
+
+
 }
