--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -237,9 +237,12 @@
 	&.big{
 		max-width: 100%;
 	}
-	height: 100%;
+
+	min-height: 100%;
 	@include media-breakpoint-up(md){
-		max-height: calc(100vh - #{rem(60)});
+		min-height:0;
+		height: auto;
+		//max-height: calc(100vh - #{rem(60)});
 	}
 
 	padding: var(--modal-py) var(--modal-px) !important;
@@ -303,13 +306,18 @@
 			@extend .custom-scroll;
 			overflow-y: auto;
 
-			min-height: rem(400);
-			height: calc(100vh - #{rem(60)} - var(--modal-py)*2 - var(--title-fs)*var(--title-lh) - var(--title-mb) - #{rem(60)} - var(--input-mb) - var(--title-mb) - #{rem(32)});
+			min-height: rem(280);
 			&--popular{
-
+				height: calc(100vh - var(--modal-py)*2 - var(--title-fs)*var(--title-lh) - var(--title-mb) - #{rem(60)} - var(--input-mb) - var(--title-mb) - #{rem(32)});
+				@include media-breakpoint-up(md){
+					height: calc(100% - #{rem(60)} - var(--modal-py)*2 - var(--title-fs)*var(--title-lh) - var(--title-mb) - #{rem(60)} - var(--input-mb) - var(--title-mb) - #{rem(32)});
+				}
 			}
 			&--all{
-
+				height: calc(100vh - var(--modal-py)*2 - var(--title-fs)*var(--title-lh) - var(--title-mb) - #{rem(60)} - var(--input-mb) - var(--title-mb) - #{rem(32)});
+				@include media-breakpoint-up(md){
+					height: calc(100vh - #{rem(100)} - var(--modal-py)*2 - var(--title-fs)*var(--title-lh) - var(--title-mb) - #{rem(60)} - var(--input-mb) - var(--title-mb) - #{rem(32)});
+				}
 			}
 
 			a{
